--- a/app/public/assets/i18n/en.json
+++ b/app/public/assets/i18n/en.json
@@ -122,6 +122,11 @@
   "contract-create-feature-success" : "the contract has been created with success",
   "contract-create-feature-error" : "an error has occured while creating the contract",
   "contract-feature-current" : "current contract",
+  "contract-feature-delete-confirmation": "Are you sure you want to delete this contract?",
+  "contract-feature-delete-confirmation-header": "Confirmation",
+  "contract-feature-delete-toast-success": "contract deleted successfully",
+  "contract-feature-delete-toast-error": "an error occured while deleting the contract",
+  "contract-feature-delete-toast-cancel": "delete contract action cancelled",
   "contract.student": "student contract",
   "contract.worker": "worker contract",
   "contract.employee": "employee contract",
