--- a/app/public/assets/i18n/fr.json
+++ b/app/public/assets/i18n/fr.json
@@ -123,6 +123,11 @@
   "contract-create-feature-success" : "le contrat a été créé avec succès",
   "contract-create-feature-error" : "une erreur a eu lieu durant la création du contrat",
   "contract-feature-current" : "contrat en cours",
+  "contract-feature-delete-confirmation": "Êtes-vous sur de vouloir supprimer ce contrat ?",
+  "contract-feature-delete-confirmation-header": "Confirmation",
+  "contract-feature-delete-toast-success": "Le contrat a été supprimé avec succès",
+  "contract-feature-delete-toast-error": "Une erreur a eu lieu durant la suppression : ",
+  "contract-feature-delete-toast-cancel": "Action de suppression annulée",
   "contract.student": "contrat étudiant",
   "contract.worker": "contrat ouvrier",
   "contract.employee": "contrat employé",
