--- a/app/public/assets/i18n/fr.json
+++ b/app/public/assets/i18n/fr.json
@@ -128,6 +128,8 @@
   "contract-feature-delete-toast-success": "Le contrat a été supprimé avec succès",
   "contract-feature-delete-toast-error": "Une erreur a eu lieu durant la suppression : ",
   "contract-feature-delete-toast-cancel": "Action de suppression annulée",
+  "contract-feature-update-toast-success": "Le contrat a été mis à jour",
+  "contract-feature-update-toast-error": "Une erreur a eu lieu durant la mise à jour du contrat",
   "contract.student": "contrat étudiant",
   "contract.worker": "contrat ouvrier",
   "contract.employee": "contrat employé",
@@ -140,6 +142,11 @@
   "perks.voiture-de-societe": "Voiture de société",
   "perks.carte-carburant": "Carte carburant",
   "perks.ordinateur": "Ordinateur",
-  "perks.telephone": "Téléphone"
+  "perks.telephone": "Téléphone",
+
+  "selected-elements": "éléments sélectionnés",
+
+  "error-is-required": "est requis"
+
 }
 
