--- a/app/public/assets/i18n/en.json
+++ b/app/public/assets/i18n/en.json
@@ -55,9 +55,12 @@
   "dashboard-feature.router-nav-home": "Home",
   "dashboard-feature.router-nav-staff": "Staff",
   "dashboard-feature.router-nav-logout": "Logout",
+  "dashboard-feature.router-nav-site": "Site",
   "dashboard-feature.header-title": "EURO ROLL",
   "dashboard-feature.fallback.page.title": "This page doesn't exist on the dashboard route",
   "dashboard-feature.home-page": "Welcome to your Dashboard",
+
+
 
   "staff-feature-overview-title" : "staff",
   "staff-firstname" : "firstname",
@@ -151,6 +154,94 @@
   "error-only-number": "this field must contain only number",
   "error-iban": "iban invalid",
   "error-date-in-futur": "this date can't be in the futur",
-  "error-mail-already-exists": "this email already exists"
+  "error-mail-already-exists": "this email already exists",
+  "site-feature-overview-title": "Overview",
+  "site-feature-candeactivate-message": "You have unsaved modifications. Do you really want to quit ?",
+  "site-feature-detail-back-to-list": "Back to sites list",
+  "site-feature-create-title": "Headquarter creation",
+  "site-formgroup-data-title": "Informations",
+  "site-formgroup-address-title": "Address",
+  "site-tab-name": "Headquarter Name",
+  "site-tab-address": "Address",
+  "site-tab-country": "Country",
+  "site-tab-action": "Actions",
+  "site-detail-feature-second-tab":"Create Invoice",
+  "invoice-item-name": "Item name",
 
+  "invoice-feature-back-to-list": "Back to Invoice List",
+  "invoice-feature-create-title": "Create Invoice",
+  "invoice-detail-feature-lines": "Invoice Lines",
+  "invoice-item": "Item",
+  "invoice-quantity": "Quantity",
+  "invoice-price": "Price",
+  "invoice-action": "Action",
+  "btn-remove": "Remove",
+  "btn-add-line": "Add Line",
+  "error.invoice.required": "{{field}} is required.",
+  "error.invoice.min": "{{field}} must be at least {{min}}.",
+  "error.invoice.max": "{{field}} must not exceed {{max}}.",
+  "error.invoice.nonEmpty": "{{field}} cannot be empty.",
+  "error.invoice.quantity.required": "Quantity is required.",
+  "error.invoice.quantity.min": "Quantity must be at least 1.",
+  "error.invoice.price.required": "Price is required.",
+  "error.invoice.price.min": "Price must be a positive value.",
+  "error.invoice.vatRate.required": "VAT rate is required.",
+  "error.invoice.vatRate.min": "VAT rate must be at least 0%.",
+  "error.invoice.vatRate.max": "VAT rate cannot exceed 100%.",
+  "error.invoice.email": "The email address doesn't match the right format (example@example.com)",
+  "error.invoice.onlyNumber": "This field must contain only numbers.",
+  "error.invoice.iban": "IBAN is invalid.",
+  "error.invoice.dateInFuture": "This date can't be in the future.",
+  "error.invoice.mailAlreadyExists": "This email already exists.",
+  "error.invoice.fieldIsRequired": "This field is required.",
+  "error.invoice.fieldNonEmpty": "This field can't be empty.",
+  "error.invoice.fieldMinLength": "This field must have at least {{minLength}} characters.",
+  "error.invoice.passwordMismatch": "Passwords do not match.",
+  "error.invoice.passwordWeak": "Password must be at least 8 characters long, contain uppercase and lowercase letters, a number, and a special character.",
+
+  "error.invoice.itemRequired": "Invoice item is required.",
+  "error.invoice.quantityRequired": "Invoice quantity is required.",
+  "error.invoice.priceRequired": "Invoice price is required.",
+  "error.invoice.priceInvalid": "Invoice price must be a valid number.",
+  "error.invoice.ibanInvalid": "Invoice IBAN is invalid.",
+  "error.invoice.dateInvalid": "Invoice date cannot be in the future.",
+  "error.invoice.emailInvalid": "Invoice email is not valid.",
+  "error.invoice.missingDetails": "Invoice details are missing.",
+  "error.invoice.lineAddFailed": "Failed to add invoice line.",
+  "error.invoice.lineRemoveFailed": "Failed to remove invoice line.",
+  "error.invoice.lineUpdateFailed": "Failed to update invoice line.",
+  "error.invoice.saveFailed": "Failed to save the invoice.",
+  "error.invoice.deleteFailed": "Failed to delete the invoice.",
+  "error.invoice.itemMissing": "Invoice item name is missing.",
+  "error.invoice.confirmDelete": "Are you sure you want to delete this invoice?",
+  "error.invoice.saveError": "An error occurred while saving the invoice.",
+  "error.invoice.invalidData": "Invoice contains invalid data.",
+  "error.invoice.cannotDelete": "Invoice cannot be deleted.",
+  "error.invoice.emptyFields": "Some fields are empty in the invoice.",
+  "invoice-total-without-vat": "PRICE",
+  "invoice-total-vat": "VAT",
+  "invoice-total-with-vat": "TOTAL",
+  "invoice.invoice-lines.title": "Invoice Lines",
+  "invoice-vatRate": "Vat Rate",
+  "btn-create-invoice": "Create Invoice",
+  "invoice-feature-update-title": "Edit Invoice",
+  "invoice-detail-feature-details": "Invoice Data",
+  "invoice-detail-feature-address": "Address",
+  "btn-update-invoice": "Update Invoice",
+  "invoice-date": "Date",
+  "invoice-type": "Invoice type",
+  "invoice-address": "Address",
+  "invoice-amount": "Amount",
+  "invoice-actions": "Actions",
+  "site-feature-detail-title": "Headquarter Details",
+  "site-detail-feature-first-tab": "Info",
+  "btn-back": "Return",
+  "site-detail-feature-address": "Address",
+  "site-siteName": "headquarter name",
+  "site-comment": "comment",
+  "site-detail-feature-update-toast-success": "Success updating site",
+  "site-detail-feature-update-toast-error": "Error updating site",
+  "site-detail-feature-delete-confirmation-header": "Delete Site",
+  "site-detail-feature-delete-confirmation": "Are you sure you want to delete the site ?",
+  "invoice-status": "Status"
 }
