--- a/app/public/assets/i18n/fr.json
+++ b/app/public/assets/i18n/fr.json
@@ -1,116 +1,116 @@
 {
-  "fallback.page.back-home": "retour vers la page d'accueil",
+  "fallback.page.back-home": "retour à la page d'accueil",
   "footer": "2024 Projet2. Tous droits réservés.",
 
-  "home-feature.fallback.page.title": "Cette page n'existe pas sur la route principale",
+  "home-feature.fallback.page.title": "Cette page n'existe pas sur la route d'accueil",
   "home-feature.home-page.title": "Bienvenue sur notre site",
   "home-feature.home-page.explore": "Découvrez nos fonctionnalités et services",
   "home-feature.home-page.get-started-cta": "Commencer",
   "home-feature.home-page.subtitle": "Contenu à ajouter",
-  "home-feature.home-page.subtitle-content": "Du nouveau contenu arrive bientôt !",
+  "home-feature.home-page.subtitle-content": "Nouveau contenu à venir",
   "home-feature.home-page.join-title": "Prêt à nous rejoindre ?",
-  "home-feature.home-page.join-content": "Inscrivez-vous et commencez à explorer nos services dès aujourd'hui!",
-  "home-feature.home-page.sign-up-cta": "S'inscrire maintenant",
+  "home-feature.home-page.join-content": "Inscrivez-vous et commencez à explorer nos services dès aujourd'hui !",
+  "home-feature.home-page.sign-up-cta": "Inscrivez-vous maintenant !",
 
-  "security-feature.sign-in-page.title": "Ravi de vous revoir !",
-  "security-feature.sign-in-page.subtitle": "Identifiez-vous pour accéder au dashboard",
-  "security-feature.sign-in-page.username.label": "Identifiant",
-  "security-feature.sign-in-page.username.placeholder": "Entrez votre identifiant",
+  "security-feature.sign-in-page.title": "Content de vous revoir !",
+  "security-feature.sign-in-page.subtitle": "Connectez-vous pour accéder à l'administration",
+  "security-feature.sign-in-page.username.label": "Nom d'utilisateur",
+  "security-feature.sign-in-page.username.placeholder": "Entrez votre nom d'utilisateur",
   "security-feature.sign-in-page.password.label": "Mot de passe",
-  "security-feature.sign-in-page.password.placeholder": "Entrez votre Mot de passe",
-  "security-feature.sign-in-page.error.username-required": "L'identifiant' est requis",
-  "security-feature.sign-in-page.error.password-required": "Le Mot de passe est requis",
-  "security-feature.sign-in-page.error.description": "{count, plural, =0{Vous n'avez pas d'erreur} one{Vous avez une erreur} other{Vous avez {count} erreurs}}.",
+  "security-feature.sign-in-page.password.placeholder": "Entrez votre mot de passe",
+  "security-feature.sign-in-page.error.username-required": "Le nom d'utilisateur est requis",
+  "security-feature.sign-in-page.error.password-required": "Le mot de passe est requis",
+  "security-feature.sign-in-page.error.description": "{count, plural, =0 {Aucune erreur} one {Vous avez une erreur} other {Vous avez {count} erreurs}}.",
   "security-feature.sign-in-input": "se connecter",
   "security-feature.sign-in-page.error.username-minlength": "Le nom d'utilisateur doit contenir au moins {{requiredLength}} caractères",
   "security-feature.sign-in-page.error.invalid-credentials": "Nom d'utilisateur ou mot de passe invalide.",
-  "security-feature.sign-in-page.login-successful": "connexion réussie",
+  "security-feature.sign-in-page.login-successful": "Connexion réussie !",
   "security-feature.sign-up.success": "Inscription réussie ! Veuillez vous connecter",
   "security-feature.input-cancel": "annuler",
   "security-feature.sign-up-title": "Créer un compte",
-  "security-feature.sign-up-subtitle": "Créez votre compte pour accéder au dashboard !",
+  "security-feature.sign-up-subtitle": "Créez un compte pour accéder au tableau de bord",
   "security-feature.sign-up-page.label.username": "Nom d'utilisateur",
-  "security-feature.sign-up-page.placeholder.username": "Entrer votre nom d'utilisateur",
-  "security-feature.sign-up-page.label.email": "Adresse mail",
-  "security-feature.sign-up-page.placeholder.email": "Entrer votre adresse mail",
+  "security-feature.sign-up-page.placeholder.username": "Entrez votre nom d'utilisateur",
+  "security-feature.sign-up-page.label.email": "Email",
+  "security-feature.sign-up-page.placeholder.email": "Entrez votre email",
   "security-feature.sign-up-page.label.password": "Mot de passe",
-  "security-feature.sign-up-page.placeholder.password": "Entrer votre mot de passe",
-  "security-feature.sign-up-page.label.confirm-password": "Confirmation du mot de passe",
-  "security-feature.sign-up-page.placeholder.confirm-password": "Confirmer votre mot de passe",
-  "security-feature.sign-up-input": "s'enregister",
+  "security-feature.sign-up-page.placeholder.password": "Entrez votre mot de passe",
+  "security-feature.sign-up-page.label.confirm-password": "Confirmez le mot de passe",
+  "security-feature.sign-up-page.placeholder.confirm-password": "Confirmez votre mot de passe",
+  "security-feature.sign-up-input": "s'inscrire",
   "security-feature.sign-up.to.login": "Vous avez déjà un compte ?",
-  "security-feature.sign-up-page.error.username-required": "L'identifiant est requis",
-  "security-feature.sign-up-page.error.username-minlength": "L'identifiant  doit contenir au moins {{requiredLength}} caractères",
-  "security-feature.sign-up-page.error.nonEmpty": "L'identifiant ne peut pas être vide ou contenir uniquement des espaces",
+  "security-feature.sign-up-page.error.username-required": "le nom d'utilisateur est requis",
+  "security-feature.sign-up-page.error.username-minlength": "le nom d'utilisateur doit contenir au moins {{requiredLength}} caractères",
+  "security-feature.sign-up-page.error.nonEmpty": "le nom d'utilisateur ne peut pas être vide ou contenir uniquement des espaces",
   "security-feature.sign-up-page.error.mail-invalid": "Veuillez entrer une adresse email valide",
-  "security-feature.sign-up-page.error.mail-required": "Veuillez entrer une adresse email valide",
-  "security-feature.sign-up-page.error.password-required": "Un mot de passe est requis",
-  "security-feature.sign-up-page.error.confirmPassword-required": "Un mot de passe est requis",
+  "security-feature.sign-up-page.error.mail-required": "Une adresse email est requise",
   "security-feature.sign-up-page.error.password-mismatch": "Les mots de passe ne correspondent pas",
-  "security-feature.sign-up-page.error.password-weak": "Le mot de passe doit comporter au moins 8 caractères, inclure des majuscules, des minuscules, un chiffre et un caractère spécial.",
-  "security-feature.fallback.page.title": "Cette page n'existe pas sur la route sécurité",
+  "security-feature.sign-up-page.error.password-required": "Le mot de passe est requis",
+  "security-feature.sign-up-page.error.password-weak": "Le mot de passe doit contenir au moins 8 caractères, des lettres majuscules et minuscules, un chiffre et un caractère spécial.",
+  "security-feature.sign-up-page.error.confirmPassword-required": "Confirmez votre mot de passe",
+  "security-feature.fallback.page.title": "Cette page n'existe pas sur la route du compte",
   "security-feature.login.to.sign-up": "Pas encore de compte ?",
 
   "dashboard-feature.router-title": "Tableau de bord",
   "dashboard-feature.router-nav-home": "Accueil",
   "dashboard-feature.router-nav-staff": "Personnel",
-  "dashboard-feature.router-nav-logout": "Se déconnecter",
+  "dashboard-feature.router-nav-logout": "Déconnexion",
+  "dashboard-feature.router-nav-site": "Site",
   "dashboard-feature.header-title": "EURO ROLL",
-  "dashboard-feature.fallback.page.title": "Cette page n'existe pas sur la route du dashboard",
+  "dashboard-feature.fallback.page.title": "Cette page n'existe pas sur la route du tableau de bord",
   "dashboard-feature.home-page": "Bienvenue sur votre tableau de bord",
 
-  "staff-feature-overview-title" : "Travailleurs",
-  "staff-overview-no-staff" : "Pas encore de travailleurs enregistrés",
-
+  "staff-feature-overview-title" : "personnel",
   "staff-firstname" : "prénom",
   "staff-lastname" : "nom",
   "staff-birthdate": "date de naissance",
   "staff-mail" : "email",
   "staff-gender" : "genre",
-  "staff-phone" : "telephone",
-  "staff-role" : "role",
+  "staff-phone" : "téléphone",
+  "staff-role" : "rôle",
   "staff-iban" : "iban",
 
   "staff-overview-action" : "action",
-  "overview-action-detail" : "detail",
-  "overview-action-delete" : "supprimer",
+  "staff-overview-action-detail" : "détail",
+  "staff-overview-action-delete" : "supprimer",
+  "staff-overview-no-staff" : "Aucun employé enregistré pour le moment",
 
-  "staff-feature-detail-title" : "Détails employé",
-  "staff-feature-detail-back-to-list" : "RETOUR A LA LISTE",
-  "staff-detail-feature-first-tab" : "données personnelles & contact",
+  "staff-feature-detail-title" : "Détails de l'employé",
+  "staff-feature-detail-back-to-list" : "RETOUR À LA LISTE",
+  "staff-detail-feature-first-tab" : "données personnelles & contact" ,
   "staff-detail-feature-second-tab" : "contrat",
   "staff-detail-feature-personal-data" : "données personnelles",
   "staff-detail-feature-address" : "adresse",
   "staff-detail-feature-contact" : "contact",
-  "staff-detail-feature-update-toast-success" : "Le membre du personnel a bien été mis à jour",
-  "staff-detail-feature-update-toast-error" : "Une erreur serveur est survenue",
-  "staff-detail-feature-not-found" : "le travailleur n'a pas été trouvé",
+  "staff-detail-feature-update-toast-success" : "employé mis à jour avec succès",
+  "staff-detail-feature-update-toast-error" : "une erreur serveur est survenue",
+  "staff-detail-feature-not-found" : "employé non trouvé",
 
   "address-road" : "rue",
-  "address-nb" : "numero",
+  "address-nb" : "numéro",
   "address-cp" : "code postal",
   "address-town" : "ville",
   "address-country": "pays",
-  "address-complements" : "complements",
+  "address-complements" : "compléments",
 
   "btn-confirm": "CONFIRMER",
   "btn-cancel" : "ANNULER",
-  "btn-edit": "EDITER",
+  "btn-edit": "MODIFIER",
   "btn-delete": "SUPPRIMER",
   "btn-save": "SAUVEGARDER",
-  "btn-detail": "DETAIL",
+  "btn-detail": "DÉTAIL",
   "btn-create": "AJOUTER",
 
-  "staff-detail-feature-delete-confirmation": "Êtes-vous sur de vouloir supprimer ce travailleur ?",
+  "staff-detail-feature-delete-confirmation": "Êtes-vous sûr de vouloir supprimer cet employé ?",
   "staff-detail-feature-delete-confirmation-header": "Confirmation",
-  "staff-detail-feature-delete-toast-success": "Le travailleur a été supprimé avec succès",
-  "staff-detail-feature-delete-toast-error": "Une erreur a eu lieu durant la suppression : ",
-  "staff-detail-feature-delete-toast-cancel": "Action annulée",
+  "staff-detail-feature-delete-toast-success": "Employé supprimé avec succès !",
+  "staff-detail-feature-delete-toast-error": "Une erreur est survenue lors de la suppression de l'employé : ",
+  "staff-detail-feature-delete-toast-cancel": "Action de suppression annulée.",
 
-  "staff-feature-create-title": "Ajout d'un nouveau travailleur",
-  "staff-feature-create-confirmation" : "Le travailleur a été créé avec succès",
-  "staff-feature-create-error" : "Une erreur a eu lieu durant la création: ",
-  "staff-feature-candeactivate-message" : "Vous avez des modifications non sauvegardées. Voulez-vous vraiment quitter ?",
+  "staff-feature-create-title": "Ajouter un nouvel employé",
+  "staff-feature-create-confirmation" : "Employé créé avec succès",
+  "staff-feature-create-error" : "Une erreur est survenue lors de la création de l'employé :",
+  "staff-feature-candeactivate-message" : "Vous avez des modifications non enregistrées. Voulez-vous vraiment quitter ?",
 
   "form-validation-all-field-must-be-completed" : "tous les champs doivent être remplis",
 
@@ -121,17 +121,17 @@
   "contract-create-feature-contractType" : "type de contrat",
   "contract-create-feature-weeklySchedule" : "horaire hebdomadaire",
   "contract-create-feature-success" : "le contrat a été créé avec succès",
-  "contract-create-feature-error" : "une erreur a eu lieu durant la création du contrat",
-  "contract-feature-current" : "contrat en cours",
-  "contract-feature-delete-confirmation": "Êtes-vous sur de vouloir supprimer ce contrat ?",
+  "contract-create-feature-error" : "une erreur est survenue lors de la création du contrat",
+  "contract-feature-current" : "contrat actuel",
+  "contract-feature-delete-confirmation": "Êtes-vous sûr de vouloir supprimer ce contrat ?",
   "contract-feature-delete-confirmation-header": "Confirmation",
-  "contract-feature-delete-toast-success": "Le contrat a été supprimé avec succès",
-  "contract-feature-delete-toast-error": "Une erreur a eu lieu durant la suppression : ",
-  "contract-feature-delete-toast-cancel": "Action de suppression annulée",
-  "contract-feature-update-toast-success": "Le contrat a été mis à jour",
-  "contract-feature-update-toast-error": "Une erreur a eu lieu durant la mise à jour du contrat",
+  "contract-feature-delete-toast-success": "contrat supprimé avec succès",
+  "contract-feature-delete-toast-error": "une erreur est survenue lors de la suppression du contrat",
+  "contract-feature-delete-toast-cancel": "action de suppression du contrat annulée",
+  "contract-feature-update-toast-success": "contrat mis à jour avec succès",
+  "contract-feature-update-toast-error": "une erreur est survenue lors de la mise à jour du contrat",
   "contract.student": "contrat étudiant",
-  "contract.worker": "contrat ouvrier",
+  "contract.worker": "contrat travailleur",
   "contract.employee": "contrat employé",
 
   "perks.ticket_restaurant": "Ticket restaurant",
@@ -146,13 +146,93 @@
 
   "selected-elements": "éléments sélectionnés",
 
-  "error-field-is-required": "ce champs est requis",
-  "error-field-non-empty": "ce champs ne peut être vide",
-  "error-email" : "l'adresse mail ne correspond pas au format attendu (exemple@exemple.com)",
-  "error-only-number": "ce champs doit être uniquement composé de chiffres",
+  "error-field-is-required": "ce champ est requis",
+  "error-field-non-empty": "ce champ ne peut pas être vide",
+  "error-email" : "l'adresse email ne correspond pas au bon format (exemple@exemple.com)",
+  "error-only-number": "ce champ ne doit contenir que des chiffres",
   "error-iban": "iban invalide",
-  "error-date-in-futur": "cette date ne peut être dans le futur",
-  "error-mail-already-exists": "cet email est déjà utilisé"
+  "error-date-in-futur": "cette date ne peut pas être dans le futur",
+  "error-mail-already-exists": "cet email existe déjà",
+  "site-feature-overview-title": "Aperçu",
+  "site-feature-candeactivate-message": "Vous avez des modifications non enregistrées. Voulez-vous vraiment quitter ?",
+  "site-feature-detail-back-to-list": "Retour à la liste des sites",
+  "site-feature-create-title": "Création de siège social",
+  "site-formgroup-data-title": "Informations",
+  "site-formgroup-address-title": "Adresse",
+  "site-tab-name": "Nom du siège social",
+  "site-tab-address": "Adresse",
+  "site-tab-country": "Pays",
+  "site-tab-action": "Actions",
+  "site-detail-feature-second-tab":"Créer une facture",
+  "invoice-item-name": "Nom de l'article",
 
+  "invoice-feature-back-to-list": "Retour à la liste des factures",
+  "invoice-feature-create-title": "Créer une facture",
+  "invoice-detail-feature-lines": "Lignes de facture",
+  "invoice-item": "Article",
+  "invoice-quantity": "Quantité",
+  "invoice-price": "Prix",
+  "invoice-action": "Action",
+  "btn-remove": "Supprimer",
+  "btn-add-line": "Ajouter une ligne",
+  "error.invoice.required": "{{field}} est requis.",
+  "error.invoice.min": "{{field}} doit être au moins {{min}}.",
+  "error.invoice.max": "{{field}} ne doit pas dépasser {{max}}.",
+  "error.invoice.nonEmpty": "{{field}} ne peut pas être vide.",
+  "error.invoice.quantity.required": "La quantité est requise.",
+  "error.invoice.quantity.min": "La quantité doit être au moins 1.",
+  "error.invoice.price.required": "Le prix est requis.",
+  "error.invoice.price.min": "Le prix doit être une valeur positive.",
+  "error.invoice.vatRate.required": "Le taux de TVA est requis.",
+  "error.invoice.vatRate.min": "Le taux de TVA doit être au moins 0%.",
+  "error.invoice.vatRate.max": "Le taux de TVA ne peut pas dépasser 100%.",
+  "error.invoice.email": "L'adresse email ne correspond pas au bon format (exemple@exemple.com)",
+  "error.invoice.onlyNumber": "Ce champ ne doit contenir que des chiffres.",
+  "error.invoice.iban": "L'IBAN est invalide.",
+  "error.invoice.dateInFuture": "Cette date ne peut pas être dans le futur.",
+  "error.invoice.mailAlreadyExists": "Cet email existe déjà.",
+  "error.invoice.fieldIsRequired": "Ce champ est requis.",
+  "error.invoice.fieldNonEmpty": "Ce champ ne peut pas être vide.",
+  "error.invoice.fieldMinLength": "Ce champ doit contenir au moins {{minLength}} caractères.",
+  "error.invoice.passwordMismatch": "Les mots de passe ne correspondent pas.",
+  "error.invoice.passwordWeak": "Le mot de passe doit contenir au moins 8 caractères, des lettres majuscules et minuscules, un chiffre et un caractère spécial.",
+
+  "error.invoice.itemRequired": "L'article de la facture est requis.",
+  "error.invoice.quantityRequired": "La quantité de la facture est requise.",
+  "error.invoice.priceRequired": "Le prix de la facture est requis.",
+  "error.invoice.priceInvalid": "Le prix de la facture doit être un nombre valide.",
+  "error.invoice.ibanInvalid": "L'IBAN de la facture est invalide.",
+  "error.invoice.dateInvalid": "La date de la facture ne peut pas être dans le futur.",
+  "error.invoice.emailInvalid": "L'email de la facture n'est pas valide.",
+  "error.invoice.missingDetails": "Les détails de la facture sont manquants.",
+  "error.invoice.lineAddFailed": "Échec de l'ajout de la ligne de facture.",
+  "error.invoice.lineRemoveFailed": "Échec de la suppression de la ligne de facture.",
+  "error.invoice.lineUpdateFailed": "Échec de la mise à jour de la ligne de facture.",
+  "error.invoice.saveFailed": "Échec de la sauvegarde de la facture.",
+  "error.invoice.deleteFailed": "Échec de la suppression de la facture.",
+  "error.invoice.itemMissing": "Le nom de l'article de la facture est manquant.",
+  "error.invoice.confirmDelete": "Êtes-vous sûr de vouloir supprimer cette facture ?",
+  "error.invoice.saveError": "Une erreur est survenue lors de la sauvegarde de la facture.",
+  "error.invoice.invalidData": "La facture contient des données invalides.",
+  "error.invoice.cannotDelete": "La facture ne peut pas être supprimée.",
+  "error.invoice.emptyFields": "Certains champs de la facture sont vides.",
+  "invoice-total-without-vat": "PRIX",
+  "invoice-total-vat": "TVA",
+  "invoice-total-with-vat": "TOTAL",
+  "invoice.invoice-lines.title": "Lignes de facture",
+  "invoice-vatRate": "Taux de TVA",
+  "btn-create-invoice": "Créer une facture",
+  "invoice-feature-update-title": "Modifier la facture",
+  "invoice-detail-feature-details": "Données de la facture",
+  "invoice-detail-feature-address": "Adresse",
+  "btn-update-invoice": "Mettre à jour la facture",
+  "invoice-date": "Date",
+  "invoice-type": "Type de facture",
+  "invoice-address": "Adresse",
+  "invoice-amount": "Montant",
+  "invoice-actions": "Actions",
+  "site-feature-detail-title": "Détails du siège social",
+  "site-detail-feature-first-tab": "Informations",
+  "btn-back": "Retour",
+  "site-comment": "commentaire"
 }
-
